syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
}

message CreateOrderRequest {
  string userId = 1;
  string productId = 2;
  int32 quantity = 3;
}

message GetOrderRequest {
  string id = 1;
}

message OrderResponse {
  string id = 1;
  string userId = 2;
  string productId = 3;
  int32 quantity = 4;     
  double totalPrice = 5;
  string userName = 6;
  string productName = 7;
}
